src/assets/scss/base.scss
h1, h2, h3, h4, h5, h6 {
  color: #010405;
  font-weight: 600;
}
h4 {
  font-size: 1.5rem;
}
.f- {
  &28 {
    font-size: 28px;
  }
  &16 {
    font-size: 16px;
  }
  &green {
    color: #9ccc65;
  }
  &red {
    color: #9ccc65;
  }
}

.card {
  box-shadow: 0 2px 10px -1px rgba(69, 90, 100, 0.3);
  margin-bottom: 30px;
  transition: box-shadow 0.2s ease-in-out;

  &-footer {
    border-top: 1px solid #e2e5e8;
    padding: 12px 20px;
  }
}

.is-invalid-text {
  color: #dc3545 !important;
}
.is-valid-text {
  color: #28a745 !important;
}

.form-control {
  box-shadow: none;
}

